# djangocms-cookie-love

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  TESTING.md  pyproject.toml  setup.cfg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  chore.md  feature_request.md
.github/workflows/: ci.yml
djangocms_cookie_love/: __init__.py  admin.py  apps.py  cms_plugins.py  constants.py  context_processors.py  forms.py  middleware.py  models.py  urls.py  utils.py  views.py
djangocms_cookie_love/contrib/cms/: apps.py  cms_plugins.py
djangocms_cookie_love/contrib/playwright/: apps.py
djangocms_cookie_love/locale/de/LC_MESSAGES/: django.po
djangocms_cookie_love/locale/en/LC_MESSAGES/: django.po
djangocms_cookie_love/management/commands/: purge_old_consents.py
djangocms_cookie_love/migrations/: 0001_initial.py  0001_squashed_0007_replace_page_fields_with_paths.py  0002_default_cookie_groups.py  0003_alter_userconsent_consent_method.py  0004_cookie_model.py  0005_cookieconsentconfig_imprint_page_and_more.py  0006_discoveredcookie.py  0007_replace_page_fields_with_paths.py
djangocms_cookie_love/static/djangocms_cookie_love/css/: cookie-love.css
djangocms_cookie_love/static/djangocms_cookie_love/js/: cookie-love.js
djangocms_cookie_love/templates/djangocms_cookie_love/: banner.html  settings_modal.html
djangocms_cookie_love/templates/djangocms_cookie_love/bootstrap/: banner.html
djangocms_cookie_love/templates/djangocms_cookie_love/custom/: banner.html
djangocms_cookie_love/templatetags/: cookie_love_tags.py
example/: README.md  manage.py  setup.sh
example/example/: settings.py  urls.py  wsgi.py
example/templates/: base.html  datenschutz.html  home.html  impressum.html
idea/: plain-django-support.md
plan/: checklist.md  overview.md  step-01-project-scaffolding.md  step-02-django-app-skeleton.md  step-03-data-models.md  step-04-gdpr-compliance.md  step-05-cms-plugin.md  step-06-admin-edit-page.md  step-07-views-api.md  step-08-frontend.md  step-09-middleware.md  step-10-tests.md  step-11-internationalization.md
tests/: conftest.py  settings.py  test_admin.py  test_context_processors.py  test_forms.py  test_gdpr.py  test_middleware.py  test_models.py  test_plugins.py  test_purge_old_consents.py  test_views.py  urls.py
(+6 files in other folders)
