[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "djangocms-cookie-love"
version = "0.1.1"
description = "A GDPR-compliant cookie consent banner plugin for Django CMS"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Noelp Max", email = "noelpmax@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 6.0",
    "Framework :: Django CMS",
    "Framework :: Django CMS :: 4.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Natural Language :: English",
    "Natural Language :: German",
]
dependencies = [
    "django>=4.2",
    "django-cms>=4.0",
    "django-treebeard>=4.7,<5.1",  # treebeard ≥5.1 breaks django-cms migrations (NumConv API change)
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "pytest-cov",
    "ruff",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/maxnoelp/djangocms-cookie-love"
Repository = "https://github.com/maxnoelp/djangocms-cookie-love"
Changelog = "https://github.com/maxnoelp/djangocms-cookie-love/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["djangocms_cookie_love*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "DJ",   # flake8-django
]
ignore = [
    "E501",  # line too long – handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["djangocms_cookie_love"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
